--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "arbos-precompiles": "^1.0.2",
     "hardhat": "^2.20.1"
   },
   "devDependencies": {
